# Plant-CNN-CPP

./: CMakeLists.txt  compile.cmd  debug.cmd  log.txt  run.cmd
backups/: M1kernels162.json  M4kernels64.json  M5kernels128.json
res/: activations.json  kernelBiases.json  kernelBiases380.json  kernelWeights.json  kernelWeights380.json  kernels.json  maps.json  mlpBiases.json  mlpBiases380.json  stats.json
src/: cnn.cpp  cnn.hpp  cnnutils.cpp  cnnutils.hpp  dataset.cpp  dataset.hpp  globals.hpp  imageutils.cpp  imageutils.hpp  main.cpp  matrices.cpp  matrices.hpp  plantimage.cpp  plantimage.hpp  tensor.cpp  tensor.hpp  utils.cpp  utils.hpp
